package Render;

import "ddf_extensions.proto";

option java_package = "com.dynamo.render.proto";
option java_outer_classname = "Model";
option (ddf_java_package) = "com.dynamo.render.ddf";

message ModelDesc
{
    required string Name = 1;
    required string Mesh = 2;
    required string Material = 3;
    optional string Texture0 = 4;
}
