package dmRenderDDF;

import "ddf/ddf_extensions.proto";
import "ddf/ddf_math.proto";

option java_package = "com.dynamo.render.proto";
option java_outer_classname = "Render";

message RenderPrototypeDesc
{
    message MaterialDesc
    {
        required string name = 1;
        required string material = 2 [(resource) = true];
    }

    required string script = 1 [(resource) = true];
    repeated MaterialDesc materials = 2;
}

message DrawText
{
    required dmMath.Point3 position = 1;
    required string text = 2;
}

message DrawLine
{
    required dmMath.Point3 start_point = 1;
    required dmMath.Point3 end_point = 2;
    required dmMath.Vector4 color = 3;
}

message WindowResized
{
    required uint32 width = 1;
    required uint32 height = 2;
}
